Completed admin assessment creation to assessment choices
