# routes/api_admin.php
@@ -15,7 +15,6 @@ Route::prefix('admin')->group(function () {
     Route::middleware('admin')->group(function () {
         Route::get('me', fn() => auth('admins')->user());
         Route::post('logout', [AdminAuthController::class, 'logout']);
-        
     });
 });
 
@@ -43,14 +42,14 @@ Route::prefix('admin')->middleware('admin')->group(function () {
     Route::delete('assignments', [AssessmentAssignmentController::class, 'destroy']);
 
     // questions
-    Route::get('assessments/{assessmentId}/questions', [AssessmentQuestionController::class, 'index']);
-    Route::post('assessments/{assessmentId}/questions', [AssessmentQuestionController::class, 'store']);
+    Route::get('assessments/{assessment_id}/questions', [AssessmentQuestionController::class, 'index']);
+    Route::post('assessments/{assessment_id}/questions', [AssessmentQuestionController::class, 'store']);
     Route::put('questions/{id}', [AssessmentQuestionController::class, 'update']);
     Route::delete('questions/{id}', [AssessmentQuestionController::class, 'destroy']);
 
     // choices
-    Route::get('questions/{questionId}/choices', [AssessmentChoiceController::class, 'index']);
-    Route::post('questions/{questionId}/choices', [AssessmentChoiceController::class, 'store']);
+    Route::get('questions/{question_id}/choices', [AssessmentChoiceController::class, 'index']);
+    Route::post('questions/{question_id}/choices', [AssessmentChoiceController::class, 'store']);
     Route::put('choices/{id}', [AssessmentChoiceController::class, 'update']);
     Route::delete('choices/{id}', [AssessmentChoiceController::class, 'destroy']);
 });
